<resources>
    <string name="app_name">My Library</string>
    <string name="all_books">All Books</string>
    <string name="reading_books">Reading Books</string>
    <string name="finished_books">Finished Books</string>
    <string name="favorite_books">Favorite Books</string>
    <string name="wish_list">Your Wish List</string>
    <string name="about">About</string>
    <string name="book_details">Book Details</string>
    <string name="license">Developed by Nguyen Toan Thang</string>
    <string name="book_title">Title:</string>
    <string name="book_name_demo">The Mysterious</string>
    <string name="logo_description">App Logo</string>
    <string name="author">Author:</string>
    <string name="pages">Pages:</string>
    <string name="genre">Genre:</string>
    <string name="author_name">Thang</string>
    <string name="number">150</string>
    <string name="short_desc">Description:</string>
    <string name="description_demo">This is a description</string>
    <string name="remove">Remove</string>

    <string name="currently_reading">Currently Reading</string>
    <string name="finished_reading">Finished Reading</string>
    <string name="add_to_wish_list">Add To Wish List</string>
    <string name="add_to_favorite">Add To Favorite</string>

    <string name="add_a_book">Add a book</string>
    <string name="edit_book">Edit book</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_add">Title</string>
    <string name="author_add">Author</string>
    <string name="pages_add">Pages</string>
    <string name="image_url_add">Image URL</string>
    <string name="short_desc_add">Short description</string>
    <string name="long_desc_add">Long description</string>
    <string name="genre_add">Genre:</string>

    <!-- Toast messages -->
    <string name="general_error">Something went wrong. Please try again later.</string>
    <string name="update_success">Updated successfully</string>
    <string name="add_success">You added a new book</string>
    <string name="delete_confirm">Are you sure you want to delete this book?</string>
    <string name="delete_success">This book has been deleted</string>
    <string name="stop_playing_first">Please stop playing first</string>
    <string name="require_permission">This functionality requires your permission to work</string>
    <string name="permission_granted">Permission granted</string>
    <string name="overwrite_current_audio">Recording again will overwrite your current audio. Do you wish to continue?</string>

    <!-- General -->
    <string name="no_data">No Data</string>
    <string name="replay">Replay</string>
    <string name="play">Play</string>
    <string name="record">Record</string>
    <string name="book_image">Book Image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="visit">Visit</string>
    <string name="dismiss">Dismiss</string>
    <string name="stopped">Stopped</string>
    <string name="playing">Playing</string>
    <string name="finished">Finished</string>

</resources>